--- a/src/components/FieldCell/FieldCell.scss
+++ b/src/components/FieldCell/FieldCell.scss
@@ -6,11 +6,11 @@ $bombs-count-colors: (
     '2': 'green',
     '3': 'red',
     '4': 'darkblue',
-    '5': 'gold',
-    '6': 'lightblue',
+    '5': 'darkmagenta',
+    '6': 'slateblue',
     '7': 'blueviolet',
     '8': 'darkorange',
-    '9': 'black'
+    '9': 'darkred'
 );
 
 .cell {
@@ -36,9 +36,10 @@ $bombs-count-colors: (
 }
 
 .cell._bomb._open {
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' id='Layer_1' x='0px' y='0px' viewBox='0 0 512 512' style='enable-background:new 0 0 512 512;' xml:space='preserve'%3E%3Cpath style='fill:%23565164;' d='M377.212,441.898c64.465-64.469,76.4-161.574,35.799-238.125l56.127-56.126l-42.084-42.084 l-42.08-42.082l-56.127,56.124C252.294,79.006,155.191,90.94,90.723,155.408c-79.112,79.112-79.112,207.375,0,286.49 C169.835,521.008,298.098,521.008,377.212,441.898z'/%3E%3Cg%3E%3Cpath style='fill:%23000003;' d='M483.085,0.316c-5.776-1.424-11.611,2.106-13.034,7.88c-7.51,30.48-22.387,58.577-43.229,81.903 l-34.234-34.234c-4.205-4.206-11.022-4.206-15.232-0.001l-50.581,50.579c-28.576-13.826-60.13-21.138-92.81-21.138 c-56.988,0-110.564,22.191-150.86,62.488c-83.182,83.183-83.182,218.535,0,301.72C123.402,489.808,176.977,512,233.965,512 c56.986,0,110.564-22.191,150.86-62.489c65.776-65.778,79.525-164.171,41.277-243.6l50.652-50.651 c2.019-2.019,3.153-4.759,3.153-7.615c0-2.855-1.134-5.595-3.153-7.614l-34.682-34.684c23.608-26.119,40.446-57.702,48.895-91.998 C492.388,7.573,488.861,1.738,483.085,0.316z M369.596,434.281c-36.229,36.228-84.396,56.179-135.629,56.179 s-99.401-19.951-135.629-56.179c-74.785-74.786-74.785-196.473,0-271.259c36.229-36.228,84.396-56.179,135.629-56.179 c31.649,0,62.127,7.623,89.344,21.985c0.366,0.22,0.741,0.417,1.123,0.589c16.413,8.801,31.621,20.065,45.162,33.605 C444.378,237.809,444.378,359.495,369.596,434.281z M415.317,186.237c-8.477-13.671-18.635-26.589-30.491-38.444 c-11.752-11.753-24.643-21.954-38.412-30.526l38.559-38.556l34.464,34.464c0,0.001,0,0.002,0.002,0.003 c0,0,0.002,0.001,0.002,0.002l34.466,34.467L415.317,186.237z'/%3E%3Cpath style='fill:%23000003;' d='M74.036,287.583c-5.946,0-10.77,4.822-10.77,10.77v0.299c0,5.947,4.824,10.77,10.77,10.77 c5.948,0,10.77-4.823,10.77-10.77v-0.299C84.806,292.405,79.985,287.583,74.036,287.583z'/%3E%3Cpath style='fill:%23000003;' d='M393.897,309.721c5.946,0,10.77-4.822,10.77-10.77v-0.298c0-5.948-4.824-10.77-10.77-10.77 c-5.948,0-10.77,4.822-10.77,10.77v0.298C383.127,304.901,387.949,309.721,393.897,309.721z'/%3E%3Cpath style='fill:%23000003;' d='M113.262,177.95c-24.352,24.356-40.612,55.117-47.019,88.956 c-1.106,5.845,2.734,11.479,8.578,12.587c0.677,0.127,1.351,0.19,2.015,0.19c5.074,0,9.592-3.601,10.57-8.769 c5.599-29.57,19.807-56.449,41.087-77.733c4.207-4.207,4.207-11.025,0-15.232C124.288,173.742,117.466,173.743,113.262,177.95z'/%3E%3Cpath style='fill:%23000003;' d='M233.966,447.813c-5.946,0-10.77,4.823-10.77,10.77c0,5.948,4.824,10.77,10.77,10.77 c81.944,0,152.48-58.438,167.721-138.953c1.106-5.845-2.734-11.479-8.578-12.586c-5.844-1.101-11.479,2.734-12.586,8.579 C367.206,396.748,305.57,447.813,233.966,447.813z'/%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3C/svg%3E");
+    background-image: url('../../assets/bomb.png');
     background-color: rgba(234, 42, 42, 0.709);
     background-repeat: no-repeat;
+    background-size: contain;
 }
 
 @each $number, $color in $bombs-count-colors {
@@ -48,8 +49,8 @@ $bombs-count-colors: (
 }
 
 .cell._flag {
-    background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' standalone='no'%3F%3E%3C!DOCTYPE svg PUBLIC '-//W3C//DTD SVG 20010904//EN' 'http://www.w3.org/TR/2001/REC-SVG-20010904/DTD/svg10.dtd'%3E%3Csvg version='1.0' xmlns='http://www.w3.org/2000/svg' width='64.000000pt' height='64.000000pt' viewBox='0 0 64.000000 64.000000' preserveAspectRatio='xMidYMid meet'%3E%3Cg transform='translate(0.000000,64.000000) scale(0.100000,-0.100000)'%0Afill='red' stroke='none'%3E%3Cpath d='M77 633 c-4 -3 -7 -148 -7 -320 0 -294 1 -314 18 -311 15 3 17 19 20%0A141 l3 138 52 -7 c29 -3 79 -13 112 -21 82 -21 179 -20 243 1 l52 18 0 159 c0%0A175 3 169 -65 144 -56 -20 -140 -18 -237 5 -46 11 -95 20 -110 20 -16 0 -37 9%0A-48 20 -22 22 -24 23 -33 13z'/%3E%3C/g%3E%3C/svg%3E%0A");
+    background-image: url('../../assets/flag.png');
     background-repeat: no-repeat;
-    background-color: bisque;
-    background-size: contain;
+    background-size: 75%;
+    background-position: center;
 }
