--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -5,6 +5,23 @@
 }
 
 main {
+    position: relative;
     flex-grow: 1;
     padding: 16px;
+}
+
+.legend {
+    width: 300px;
+    padding: 8px;
+    background-color: white;
+    &__title {
+        font-weight: 700;
+        font-size: 1.4rem;
+        margin-bottom: 8px;
+    }
+    &__subtitle {
+        font-weight: 600;
+        font-size: 1.2rem;
+        margin-bottom: 4px;
+    }
 }
