--- a/src/components/GameField/GameField.scss
+++ b/src/components/GameField/GameField.scss
@@ -1,7 +1,8 @@
 .fieldContainer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .field {
