Add buttons to toggle settings. Add tabindexes and outline
- Make settings inaccessible when closed using inert property. Since inert is not part of React < 19, the HTMLAttributes interface was extended to include inert

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,7 +1,14 @@
 .header {
   padding: 16px;
+  position: relative;
 }
 
 .new-game {
   padding-top: 16px;
+}
+
+.header-open-settings {
+  position: absolute;
+  top: 16px;
+  left: 16px;
 }
