--- a/src/index.scss
+++ b/src/index.scss
@@ -60,6 +60,14 @@ code {
       color: blue;
     }
   }
+  &:disabled,
+  &[disabled] {
+    user-select: none;
+    cursor: default;
+    background-color: #7f7f7f;
+    border-color: #7f7f7f;
+    color: #ffffff;
+  }
 }
 
 .title {
